--- a/all/css/main.css
+++ b/all/css/main.css
@@ -18,12 +18,12 @@
   
   
   :root {
-    --nav-color: #212529; 
-    --nav-hover-color: #0d83fd;
-    --nav-mobile-background-color: #ffffff; 
-    --nav-dropdown-background-color: #ffffff;
-    --nav-dropdown-color: #212529; 
-    --nav-dropdown-hover-color: #0d83fd; 
+    --nav-color: #2870b8; 
+    --nav-hover-color: #2b68a8;
+    --nav-mobile-background-color: #ffffff67; 
+    --nav-dropdown-background-color: #ffffff54;
+    --nav-dropdown-color: #7ba5cf; 
+    --nav-dropdown-hover-color: #3078c5; 
   }
   
 
@@ -102,7 +102,6 @@
     margin: 0 10px -6px 0;
     border: 3px solid var(--accent-color);
     border-top-color: var(--surface-color);
-    animation: php-email-form-loading 1s linear infinite;
   }
   
   @keyframes email-form-loading {
@@ -119,7 +118,7 @@
   #  Header globale
   --------------------------------------------------------------*/
   .header {
-    --background-color: rgba(255, 255, 255, 0);
+    --background-color: rgba(255, 255, 255, 0.856);
     color: var(--default-color);
     background-color: var(--background-color);
     padding: 20px 0;
@@ -131,7 +130,7 @@
     background: var(--surface-color);
     border-radius: 50px;
     padding: 5px 25px;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0. 1);
   }
   
   .scrolled .header .header-container {
@@ -687,6 +686,7 @@
   .section-title p {
     margin-bottom: 0;
   }
+
   
   /*--------------------------------------------------------------
   # Hero Section
@@ -694,7 +694,7 @@
   .hero {
     position: relative;
     padding-top: 160px;
-    background: linear-gradient(135deg, color-mix(in srgb, var(--accent-color), transparent 95%) 50%, color-mix(in srgb, var(--accent-color), transparent 98%) 25%, transparent 50%);
+    background: radial-gradient(circle at 10% 90%, color-mix(in srgb, var(--accent-color), transparent 55%), transparent 40%);
   }
   
   .hero::before {
@@ -704,7 +704,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: radial-gradient(circle at 90% 10%, color-mix(in srgb, var(--accent-color), transparent 92%), transparent 40%);
+
     pointer-events: none;
   }
   
@@ -1562,7 +1562,7 @@
   /*--------------------------------------------------------------
   # Testimonials Section
   --------------------------------------------------------------*/
-  .testimonials .testimonial-item {
+  .temoignage.temoignage-item {
     background-color: var(--surface-color);
     box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.08);
     padding: 30px;
@@ -1570,7 +1570,7 @@
     height: 100%;
   }
   
-  .testimonials .testimonial-item .testimonial-img {
+  .temoignage .temoignage-item .temoignage-img {
     width: 90px;
     border-radius: 50px;
     border: 6px solid var(--background-color);
@@ -1578,41 +1578,41 @@
     margin: 0 10px 0 0;
   }
   
-  .testimonials .testimonial-item h3 {
+  .temoignage .temoignage-item h3 {
     font-size: 18px;
     font-weight: bold;
     margin: 10px 0 5px 0;
   }
   
-  .testimonials .testimonial-item h4 {
+  .temoignage .temoignage-item h4 {
     font-size: 14px;
     color: color-mix(in srgb, var(--default-color), transparent 20%);
     margin: 0;
   }
   
-  .testimonials .testimonial-item .stars {
+  .temoignage .temoignage-item .stars {
     margin: 10px 0;
   }
   
-  .testimonials .testimonial-item .stars i {
+  .temoignage .temoignage-item .stars i {
     color: #ffc107;
     margin: 0 1px;
   }
   
-  .testimonials .testimonial-item .quote-icon-left,
-  .testimonials .testimonial-item .quote-icon-right {
+  .temoignage .temoignage-item .quote-icon-left,
+  .temoignage .temoignage-item .quote-icon-right {
     color: color-mix(in srgb, var(--accent-color), transparent 50%);
     font-size: 26px;
     line-height: 0;
   }
   
-  .testimonials .testimonial-item .quote-icon-left {
+  .temoignage .temoignage-item .quote-icon-left {
     display: inline-block;
     left: -5px;
     position: relative;
   }
   
-  .testimonials .testimonial-item .quote-icon-right {
+  .temoignage .temoignage-item .quote-icon-right {
     display: inline-block;
     right: -5px;
     position: relative;
@@ -1620,7 +1620,7 @@
     transform: scale(-1, -1);
   }
   
-  .testimonials .testimonial-item p {
+  .temoignage .temoignage-item p {
     font-style: italic;
     margin: 15px 0 0 0;
     padding: 0;
